[tool.poetry]
authors = ["Jiakuan Li <jiakuan.li.cs@gmail.com>"]
description = "Async api wrapper for [Tradier](https://documentation.tradier.com/)."
name = "asynctradier"
packages = [{include = "asynctradier"}]
readme = "README.md"
version = "0.0.1beta7"

[tool.poetry.dependencies]
aiohttp = "^3.9.1"
python = "^3.8"
strenum = "^0.4.15"
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"


[build-system]
build-backend = "poetry_dynamic_versioning.backend"
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
