[tool.poetry]
authors = ["Jiakuan Li <jiakuan.li.cs@gmail.com>"]
description = "Async api wrapper for [Tradier](https://documentation.tradier.com/)."
name = "asynctradier"
packages = [{include = "asynctradier"}]
readme = "README.md"
version = "0.0.0"

[tool.poetry.dependencies]
aiohttp = "^3.9.1"
python = "^3.9"
strenum = "^0.4.15"
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
sphinx-autobuild = "^2021.3.14"
sphinxcontrib-apidoc = "^0.4.0"
m2r2 = "^0.3.3.post2"

[tool.poetry-dynamic-versioning]
enable = true
style = "semver"
vcs = "git"
format = "v{base}"

[build-system]
build-backend = "poetry_dynamic_versioning.backend"
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
